--- a/NYTimesMostPopular/Base.lproj/Main.storyboard
+++ b/NYTimesMostPopular/Base.lproj/Main.storyboard
@@ -1,24 +1,177 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3VT-yA-QyV">
+    <device id="retina5_5" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Navigation Controller-->
+        <scene sceneID="BFn-oV-RWp">
+            <objects>
+                <navigationController id="3VT-yA-QyV" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zCL-6U-IN9">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="l1i-UC-Bxw"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1fn-v7-NEl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-177" y="7"/>
+        </scene>
+        <!--Most Popular Articles-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MostPopularArticlesViewController" customModule="NYTimesMostPopular" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="234" estimatedRowHeight="3" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="69N-KV-LHZ">
+                                <rect key="frame" x="0.0" y="64" width="414" height="672"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="mostpopulararticlecell" rowHeight="200" id="scI-vM-NK3" customClass="MostPopularArticleTableViewCell" customModule="NYTimesMostPopular" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="200"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="scI-vM-NK3" id="FF6-zn-sTU">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="199.66666666666666"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trump Tells Freshman Congresswomen to ‘Go Back’ to the Countries They Came From" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sQZ-JU-hrg">
+                                                    <rect key="frame" x="20.666666666666657" y="15.999999999999996" width="372.66666666666674" height="40.666666666666657"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sYw-Ot-Abj">
+                                                    <rect key="frame" x="20.666666666666671" y="106.66666666666669" width="223.66666666666663" height="54"/>
+                                                    <string key="text">President Trump’s attack was meant for members of the so-called squad, a group engaged in an existential and generational war of words with Speaker Nancy Pelosi.</string>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="J6X-12-6L8">
+                                                    <rect key="frame" x="273.66666666666669" y="84" width="124.33333333333331" height="99.666666666666686"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="J6X-12-6L8" firstAttribute="height" secondItem="FF6-zn-sTU" secondAttribute="height" multiplier="0.5" id="1F5-Gp-9jJ"/>
+                                                <constraint firstItem="sYw-Ot-Abj" firstAttribute="width" secondItem="sQZ-JU-hrg" secondAttribute="width" multiplier="0.6" id="OhE-0t-mHd"/>
+                                                <constraint firstItem="sQZ-JU-hrg" firstAttribute="width" secondItem="FF6-zn-sTU" secondAttribute="width" multiplier="0.9" id="WMS-Fk-Mh4"/>
+                                                <constraint firstItem="J6X-12-6L8" firstAttribute="width" secondItem="FF6-zn-sTU" secondAttribute="width" multiplier="0.3" id="ZZM-dD-gCV"/>
+                                                <constraint firstItem="sQZ-JU-hrg" firstAttribute="top" secondItem="FF6-zn-sTU" secondAttribute="top" constant="16" id="ZsZ-Al-YQk"/>
+                                                <constraint firstItem="sYw-Ot-Abj" firstAttribute="leading" secondItem="sQZ-JU-hrg" secondAttribute="leading" id="caA-7n-e6K"/>
+                                                <constraint firstItem="sYw-Ot-Abj" firstAttribute="centerY" secondItem="J6X-12-6L8" secondAttribute="centerY" id="utr-uZ-gEh"/>
+                                                <constraint firstItem="sQZ-JU-hrg" firstAttribute="centerX" secondItem="FF6-zn-sTU" secondAttribute="centerX" id="x3f-Ko-FGs"/>
+                                                <constraint firstAttribute="bottom" secondItem="J6X-12-6L8" secondAttribute="bottom" constant="16" id="xnD-cO-KrP"/>
+                                                <constraint firstAttribute="trailing" secondItem="J6X-12-6L8" secondAttribute="trailing" constant="16" id="y6v-Pd-DXt"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="abstract" destination="sYw-Ot-Abj" id="ZAE-Ne-azl"/>
+                                            <outlet property="thumbnail" destination="J6X-12-6L8" id="6OB-rp-FrZ"/>
+                                            <outlet property="title" destination="sQZ-JU-hrg" id="xhx-SE-bSp"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="6MB-HH-UT7"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="NTM-S0-hx9"/>
+                                </connections>
+                            </tableView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="Dv0-mI-hMX">
+                                <rect key="frame" x="197" y="390" width="20" height="20"/>
+                            </activityIndicatorView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Dv0-mI-hMX" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="dUg-L9-i5m"/>
+                            <constraint firstItem="Dv0-mI-hMX" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="jb2-Sg-mqN"/>
+                            <constraint firstItem="69N-KV-LHZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="jp8-wA-Wpj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="69N-KV-LHZ" secondAttribute="trailing" id="mWZ-kl-0wn"/>
+                            <constraint firstItem="69N-KV-LHZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="uXV-2m-jBQ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="69N-KV-LHZ" secondAttribute="bottom" id="vvj-gM-Wwi"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Most Popular Articles" id="GwL-ZM-yPl"/>
+                    <connections>
+                        <outlet property="activityIndicator" destination="Dv0-mI-hMX" id="r3H-v7-b0N"/>
+                        <outlet property="tableview" destination="69N-KV-LHZ" id="Wid-Rp-tG4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="920.28985507246387" y="6.5217391304347831"/>
+        </scene>
+        <!--Article Detail View Controller-->
+        <scene sceneID="Jqd-3A-TET">
+            <objects>
+                <viewController storyboardIdentifier="articledetailcontroller" id="eD1-Kd-oOZ" customClass="ArticleDetailViewController" customModule="NYTimesMostPopular" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Zb2-Ww-bdn">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bCN-Od-ABw" userLabel="ImageSlider" customClass="ImageSlideshow" customModule="ImageSlideshow">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="294.33333333333331"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trump Tells Freshman Congresswomen to ‘Go Back’ to the Countries They Came From" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Avy-YB-FOR" userLabel="title">
+                                <rect key="frame" x="20.666666666666657" y="310.33333333333331" width="372.66666666666674" height="40.666666666666686"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mXe-ba-1lz" userLabel="abstract">
+                                <rect key="frame" x="20.666666666666657" y="367" width="372.66666666666674" height="95.666666666666686"/>
+                                <string key="text">President Trump’s attack was meant for members of the so-called squad, a group engaged in an existential and generational war of words with Speaker Nancy Pelosi.</string>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LAI-Mx-GgS">
+                                <rect key="frame" x="104.66666666666669" y="684" width="205" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Read More on NYTimes"/>
+                                <connections>
+                                    <action selector="readMoreBtnClicked:" destination="eD1-Kd-oOZ" eventType="touchUpInside" id="RAC-LB-gop"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="bCN-Od-ABw" firstAttribute="height" secondItem="Zb2-Ww-bdn" secondAttribute="height" multiplier="0.4" id="0pf-lY-8ki"/>
+                            <constraint firstItem="LAI-Mx-GgS" firstAttribute="centerX" secondItem="64e-OM-TNY" secondAttribute="centerX" id="1Pj-OP-mRy"/>
+                            <constraint firstItem="64e-OM-TNY" firstAttribute="bottom" secondItem="LAI-Mx-GgS" secondAttribute="bottom" constant="16" id="3Ib-oj-fvE"/>
+                            <constraint firstItem="mXe-ba-1lz" firstAttribute="top" secondItem="Avy-YB-FOR" secondAttribute="bottom" constant="16" id="8AU-Vv-59W"/>
+                            <constraint firstItem="mXe-ba-1lz" firstAttribute="width" secondItem="Zb2-Ww-bdn" secondAttribute="width" multiplier="0.9" id="N3Y-aF-edL"/>
+                            <constraint firstItem="bCN-Od-ABw" firstAttribute="top" secondItem="Zb2-Ww-bdn" secondAttribute="top" id="Qlh-wo-ecL"/>
+                            <constraint firstItem="bCN-Od-ABw" firstAttribute="trailing" secondItem="64e-OM-TNY" secondAttribute="trailing" id="Ygh-A4-YKV"/>
+                            <constraint firstItem="Avy-YB-FOR" firstAttribute="centerX" secondItem="64e-OM-TNY" secondAttribute="centerX" id="cSd-Na-a6j"/>
+                            <constraint firstItem="bCN-Od-ABw" firstAttribute="leading" secondItem="64e-OM-TNY" secondAttribute="leading" id="dsL-de-46y"/>
+                            <constraint firstItem="Avy-YB-FOR" firstAttribute="top" secondItem="bCN-Od-ABw" secondAttribute="bottom" constant="16" id="fLI-XQ-PBc"/>
+                            <constraint firstItem="Avy-YB-FOR" firstAttribute="width" secondItem="Zb2-Ww-bdn" secondAttribute="width" multiplier="0.9" id="ngP-Ts-4dd"/>
+                            <constraint firstItem="mXe-ba-1lz" firstAttribute="centerX" secondItem="64e-OM-TNY" secondAttribute="centerX" id="xBt-1m-WJ9"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="64e-OM-TNY"/>
+                    </view>
+                    <connections>
+                        <outlet property="abstract" destination="mXe-ba-1lz" id="HcS-lF-VKK"/>
+                        <outlet property="newsTitle" destination="Avy-YB-FOR" id="uYe-QZ-px6"/>
+                        <outlet property="slider" destination="bCN-Od-ABw" id="6CN-e6-hbA"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="33t-68-DpT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1912.8" y="6.746626686656672"/>
         </scene>
     </scenes>
 </document>
